# django-on-demand

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-nginx  LICENSE  README.md  README.rst  asgi.py  deploy.sh  docker-compose.yml  docker_settings.py  manage.py  migrate_run.sh  requirements.txt  routing.py  runtests.py  settings.py  setup.cfg  setup.py  socialapp-nginx.conf  upload_to_pypi.sh  upload_to_test_pypi.sh  urls.py
.github/: pull_request_template.md
api/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py
api/migrations/: 0001_initial.py  0002_create_index.py  0003_auto_20200522_1843.py  0003_contactmessage.py  0004_notification_from_user.py  0005_notification_mentorship.py  0006_auto_20181123_1809.py
api/services/: __init__.py  chat_service.py  google_helper.py  login_service.py  notifications_helper.py  profile_service.py
api/views/: connection_views.py  consumer_profile_views.py  contact_message_view.py  conversation_views.py  login_view.py  mentee_profile_views.py  mentor_profile_views.py  mentorship_views.py  notifications_views.py  role_view.py  search_views.py  supplier_profile_views.py  user_viewset.py
consumers/: consumers.py
migrations/: 0001_initial.py  0005_notification_mentorship.py
models/: models.py
on_demand/: __init__.py  apps.py  models.py  receivers.py  serializers.py  settings_validation.py  urls.py
privacy/: conditions.html  privacy_english.html  privacy_spanish.html
serializers/: serializers.py
services/: chat_service.py  email_service.py  facebook_helper.py  linkedin_helper.py  login_service.py  notifications_helper.py
socialapp/: asgi.py  docker_settings.py  routing.py  settings.py  urls.py  wsgi.py
tests/: test_models.py  test_views.py
views/: contact_message_view.py  conversation_views.py  login_view.py  mentee_profile_views.py  mentor_profile_views.py  mentorship_views.py  notifications_views.py  search_views.py  user_viewset.py  views.py
(+23 files in other folders)
