[metadata]
name = django-on-demand
version = 1.1.0
description = A Django app to manage suppliers and consumers in an on-demand marketplace.
long_description = file: README.rst
url = https://github.com/piraidev/django-on-demand
author = Pirai Dev
author_email = piraidev@gmail.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find: